myExpressApp/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myexpressapp
  name: myexpress-svc
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    deployment: myexpressapp
  sessionAffinity: None
  type: ClusterIP
