myExpressApp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: myexpressapp
  name: myexpressapp-route
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: myexpress-svc
